# cardano-block-decoder

./: .gitignore  CHANGELOG.md  README.md  cardano-block-decoder.cabal  hie.yaml
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: cardano-block-decoder-0.1.0.0-inplace.conf  package.cache
src/Cardano/Conway/: Block.hs  Json.hs  Pretty.hs
test/: Spec.hs
test/golden/: README.md  block.json  block.pretty.md  sancho.json  sancho.pretty.md
