cabal-version:      3.16
name:               cardano-block-decoder
version:            0.1.0.0
license:            NONE
author:             Gemini
maintainer:         gemini@google.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Cardano.Conway.Block,
        Cardano.Conway.Json,
        Cardano.Conway.Pretty
    build-depends:
        base ^>=4.18.3.0,
        aeson,
        base16-bytestring,
        bech32,
        bytestring,
        cborg ^>=0.2.10.0,
        containers,
        serialise,
        text
    hs-source-dirs:   src
    default-language: Haskell2010

executable cardano-block-decoder
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        cardano-block-decoder,
        aeson,
        aeson-pretty,
        bytestring,
        base16-bytestring,
        cborg ^>=0.2.10.0,
        serialise
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite cardano-block-decoder-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:
        base ^>=4.18.3.0,
        cardano-block-decoder,
        aeson,
        bytestring,
        base16-bytestring,
        cborg ^>=0.2.10.0,
        serialise,
        hspec
    hs-source-dirs:   test
    default-language: Haskell2010
